@@ -40,7 +40,7 @@
 			<p>Information and archives for the <a href="/list/">NPDS mailing list</a> are also available.</p>
 			<p>Follow us on <a href="http://twitter.com/npds">Twitter</a></p>
 			<p>Want to see who&#8217;s Newton web server is online? Use one of the <a href="/trackers/">tracker servers</a>.</p>
-			<p>What else is new around here? Check the <a href="/changelog.txt">change log</a>. <strong>Updated:</strong> 11 November 2017</p>
+			<p>What else is new around here? Check the <a href="/changelog.txt">change log</a>. <strong>Updated:</strong> 27 December 2018</p>
 	
 		</div>
 	
