@@ -42,51 +42,14 @@
 		<ul>
 			<li><strong>Indigi</strong> operated by Pawel Piotrowski<br />
 			<a href="http://tracker.applenewton.co.uk:3680/">tracker.applenewton.co.uk:3680</a><br />&nbsp;<br /></li>
-			<li><strong>Newton Rulez!</strong> operated by Peter Geremia<br />
+			<li><strong>MesssagePad</strong> operated by Sylvain Pilet<br />
+			<a href="http://messagepad.no-ip.org:3680/">messagepad.no-ip.org:3680</a><br />&nbsp;<br /></li>
+			<li><strong>NewtonRulez</strong> operated by Peter Geremia<br />
 			<a href="http://tracker.newtonrulez.com:3680/">tracker.newtonrulez.com:3680</a><br />&nbsp;<br /></li>
-
-			<!--
-			<li><strong>Message-Pad</strong> operated by Sylvain Pilet<br />
-			<a href="http://message-pad.no-ip.org:3680/">message-pad.no-ip.org:3680</a><br />&nbsp;<br /></li>
-			<li><strong>UNNA</strong> operated by Morgan Aldridge<br />
-			<a href="http://unna.org:3680/">unna.org:3680</a><br />&nbsp;<br /></li>
-			<li><strong>Newtzilla</strong> operated by Ron Parker<br />
-			<a href="http://newtzilla.quadzilla.net:3680/">http://newtzilla.quadzilla.net:3680/</a><br />&nbsp;<br /></li>
-			<li><strong>Misato</strong> operated by Victor Rehorst<br />
-			<a href="http://misato.chuma.org:3680/">http://misato.chuma.org:3680/</a><br />
-			<a href="http://misato.chuma.org:8080/">http://misato.chuma.org:8080/</a> (Use if behind a firewall)<br />
-			<a href="http://chuma.is-a-geek.org:3680/">http://chuma.is-a-geek.org:3680/</a><br />
-			<a href="http://chuma.is-a-geek.org:8080/">http://chuma.is-a-geek.org:8080/</a> (Use if behind a firewall)<br />&nbsp;<br /></li>
-			<li><strong>Tek-Ed</strong> operated by Ed Kummel<br />
-			<a href="http://newton.tek-ed.com:3680/">http://newton.tek-ed.com:3680/</a></li>
-			<li><strong>Newtontracker</strong> operated by David Schultz<br />
-			<a href="http://newtontracker.no-ip.org:3680/">http://newtontracker.no-ip.net:3680/</a><br />&nbsp;<br /></li>
-			<li><strong>Continuity</strong> operated by Paul Guyot and hosted by Bill Shamam<br />&nbsp;<br />
-			<a href="http://npds-tracker.continuity.cx:3680/">http://npds-tracker.continuity.cx:3680/</a><br />
-			<a href="http://npds-tracker.continuity.cx:8080/">http://npds-tracker.continuity.cx:8080/</a> (Use if behind a firewall)</li>
-			<li><strong>J3ff</strong> operated by Jeff Henry<br />
-			<a href="http://j3ff.dyndns.org:3680/">http://j3ff.dyndns.org:3680/</a></li>
-			<li><strong>Xonxion</strong> operated by Manuel Probsthain<br />
-			<a href="http://npds-traq.xonxion.net:3680/">http://npds-traq.xonxion.net:3680/</a><br />
-			<a href="http://npds-traq.xonxion.net:8080/">http://npds-traq.xonxion.net:8080/</a> (Use if behind a firewall)</li>
-			<li><strong>Mymacs</strong> operated by Dan Claessens<br />
-			<a href="http://www.mymacs.net:3680/">http://www.mymacs.net:3680/</a></li>
-			-->
 		</ul>
 	
 		<h2 id="other">Individual NPDS Servers</h2>
 		<p>In addition to the NPDS-enabled Newtons listed on the tracker servers, there are often other independent servers which do not or cannot get tracked. This can be caused port filtering or other firewall restrictions on the host network. Regardless of the cause, we&#8217;ll try to list those servers here.</p>
-
-		<ul>
-			<!--
-			<li><strong>Paul Filmer</strong><br />
-			<a href="http://newton.nsf.gov/">newton.nsf.gov</a></li>
-			<li><strong>Greg Goodwin</strong><br />
-			<a href="http://oasisnewt.ddns.net:8080/">oasisnewt.ddns.net</a></li>
-			<li><strong>Tony Kan</strong><br />
-			<a href="http://genghis7777.no-ip.org/">genghis7777.no-ip.org</a></li>
-			-->
-		</ul>
 		
 		</div>
 	
